fix: #1516 - rename word-wrap to overflow-wrap

--- a/packages/marketplace/src/styles/blocks/diff-render-html.scss
+++ b/packages/marketplace/src/styles/blocks/diff-render-html.scss
@@ -44,7 +44,7 @@
 }
 
 .block {
-  word-wrap: break-word;
+  overflow-wrap: break-word;
   border-radius: 4px;
   width: 50%;
 }
